--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
     "@types/styled-components": "^5.1.26",
+    "axios": "^1.4.0",
     "formik": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.7",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
     "typescript": "^4.9.5",
@@ -43,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.0.1"
   }
 }
